syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.berkay.grpc.lib";
option java_outer_classname = "PatientProto";

service PatientService {
  rpc CreatePatient (PatientCreateRequest) returns (PatientReply) {}
  rpc GetPatient (PatientRequest) returns (PatientReply){}
  rpc GetAllPatient (PatientEmptyRequest) returns (PatientReply) {}
  rpc ModifyPatient (PatientModifyRequest) returns (PatientReply){}
  rpc DeletePatient (PatientRequest) returns (PatientReply) {}
  rpc DeleteAllPatient (PatientEmptyRequest) returns (PatientReply) {}
  rpc GetAllHospitalsOfPatient (PatientRequest) returns (PatientReply) {}
}

message PatientEmptyRequest{
}

message PatientCreateRequest {
  string name = 1;
}
message PatientRequest {
  string name = 1;
}
message PatientModifyRequest {
  string old_name = 1;
  string new_name = 2;
}

// The response message containing the greetings
message PatientReply {
  string message = 1;
}
